2008-08-24  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/admin/gtk/adminwindow.py:
	* flumotion/admin/gtk/componentlist.py:
	  Instead of only removing locally added messages in the current
	  admin client, make sure that all admin clients remove their
	  locally added messages any time a component goes to sleeping.
	  Thanks to Arek for the suggestion.

2008-08-24  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/base/baseadminnode.py:
	  When there is a component UI error in a tab, say which tab.
	  When the error is because the component's Node still uses glade_file
	  then warnings.warn and show a component warning message, but
	  still work.

2008-08-24  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/base/baseadminnode.py:
	  Make the TypeError clearer by saying which method is responsible
	  for the bug.

2008-08-24  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/admin/gtk/adminwindow.py:
	  Make sure that, when you stop a component, all client-side messages
	  are cleared from the state, so that the UI can remove them when
	  the component is sleeping.  This got broken again recently, please
	  take care when rewriting UI code.

2008-08-24  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/base/baseadminnode.py:
	  Make the id of render errors unique by using the title of the
	  Node.  This makes sure that render error messages from one node
	  do not get removed by the successful rendering of another node,
	  both deriving from the same base class.

2008-08-24  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/admin/gtk/adminwindow.py:
	  Make docstrings adhere to style guide.
	  Document the fact that _componentDo can also take a None state,
	  in which case it will look at the current selection.

2008-08-24  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/admin/command/common.py: