@@ -2,7 +2,7 @@
   <components>
     <component type="videotest-producer"
                base="flumotion/component/producers/videotest"
-               _description="Produces a raw video feed with a test signal.">
+               _description="Produces an example video signal without using a device.  This is useful for demonstrations and testing.">
       <source location="flumotion.component.producers.videotest.videotest" />
 
       <feeder name="default" />
@@ -37,7 +37,7 @@
         <property name="pattern" type="int"
                   _description="Thhe test pattern to show (smpte/snow/black/...)." />
         <property name="drop-probability" type="float"
-                  _description="The fraction of buffers to drop (0.0 - 1.0)." />
+                  _description="The fraction of buffers to drop (0.0 - 1.0). Only useful for debugging." />
         <property name="overlay-timestamps" type="bool"
                   _description="Whether to overlay buffer timestamps." />
       </properties>
