@@ -1,3 +1,10 @@
+2008-08-25  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* flumotion/component/producers/audiotest/audiotest.xml:
+	* flumotion/component/producers/videotest/videotest.xml:
+	  Update descriptions to talk about example and demonstration.
+	  See #1090.
+
 2008-08-24  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* flumotion/admin/gtk/adminwindow.py:
